Fixed formatting issues in README.md, added <script> tag in tinyletter-form.html.

--- a/tinyletter-form.html
+++ b/tinyletter-form.html
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="tinyletter.js"></script>
 <form action="https://tinyletter.com/USERNAME" method="post" target="tinyletterhider" class="tinyletter-form">
   <label>Signup for Our Newsletter</label>
   <input type="email" placeholder="Your Email Address" name="email" />
